Kliento valdymo dalis atlikta

--- a/HotelServices.csproj
+++ b/HotelServices.csproj
@@ -8,4 +8,10 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Pages\Deleteacc.cshtml">
+      <CopyToOutputDirectory></CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
