pridetas kambario status keitimas

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,13 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HotelServices;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;Application Name=\"Microsoft SQL Server Data Tools, SQL Server Object Explorer\""
-  },
-  "MailSettings": {
-    "Mail": "on45fdbetey5pcoz@ethereal.email",
-    "DisplayName": "HotelServices",
-    "Password": "qCD6w7WaPg6MF2yswj",
-    "Host": "smtp.ethereal.email",
-    "Port": 587
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HotelService;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;Application Name=\"Microsoft SQL Server Data Tools, SQL Server Object Explorer\""
   }
 }
